--- a/clients/earthtrack/build
+++ b/clients/earthtrack/build
@@ -2,6 +2,12 @@
 # Script to compile earthtrack
 #
 echo -n "Compiling earthtrack... "
-cc -Wall -O3 -s -fomit-frame-pointer -lm earthtrack.c -o earthtrack
-echo "Done!"
+rm -f earthtrack
+cc -O3 -s -fomit-frame-pointer -lm earthtrack.c -o earthtrack
+
+if [ -x earthtrack ]; then
+	echo "Done!"
+else
+	echo "earthtrack compilation failed!  :-("
+fi
 
