--- a/vocalizer/build
+++ b/vocalizer/build
@@ -1,6 +1,18 @@
 #!/bin/sh
-# Script for manually compiling vocalizer.c
+# Script for compiling vocalizer.c
 #
-echo -n "Compiling vocalizer... "
-cc -Wall -O3 -s -fomit-frame-pointer vocalizer.c -o vocalizer
-echo "Done!"
+if [ -e vocalizer.h ]; then
+	rm -f vocalizer
+	echo -n "Compiling vocalizer... "
+	cc -Wall -O3 -s -fomit-frame-pointer -lasound vocalizer.c -o vocalizer
+
+	if [ -x vocalizer ]; then
+		echo "Done!"
+	else
+		echo "Vocalizer compilation failed!  :-("
+	fi
+else
+	echo "The vocalizer.h file is missing!  Please run the"
+	echo "configuration script in PREDICT's parent directory." 
+fi
+
