--- a/build
+++ b/build
@@ -1,7 +1,7 @@
-#!/bin/sh
+#!/bin/bash
 # Script to manually compile PREDICT
 #
-if [ -a predict.h ]; then
+if [ -e predict.h ]; then
 	rm -f predict
 	echo -n "Compiling PREDICT version `cat .version`... "
 	cc -Wall -O3 -s -fomit-frame-pointer predict.c -lm -lncurses -pthread -o predict
